traduction + ajout du Anime Series Type pour Sonarr

--- a/src/i18n/locale/fr.json
+++ b/src/i18n/locale/fr.json
@@ -87,6 +87,7 @@
   "components.Settings.SonarrModal.seasonfolders": "Dossier saison",
   "components.Settings.SonarrModal.selectQualityProfile": "Sélectionner un profil qualité",
   "components.Settings.SonarrModal.selectRootFolder": "Sélectionner un dossier racine",
+  "components.Settings.SonarrModal.seriesType": "Type pour les animés",
   "components.Settings.SonarrModal.server4k": "Serveur 4K",
   "components.Settings.SonarrModal.servername": "Nom du serveur",
   "components.Settings.SonarrModal.ssl": "Utiliser SSL",
@@ -1209,7 +1210,7 @@
   "components.Discover.DiscoverSliderEdit.deletesuccess": "Slider supprimé avec succès.",
   "components.Discover.FilterSlideover.activefilters": "{count, plural, one {# Filtre actif} other {# Filtres actifs}}",
   "components.Discover.FilterSlideover.studio": "Studio",
-  "components.Layout.Sidebar.browsetv": "Série",
+  "components.Layout.Sidebar.browsetv": "Séries",
   "components.Selector.showmore": "En voir plus",
   "components.Discover.FilterSlideover.streamingservices": "Services de Streaming",
   "components.Selector.showless": "En voir moins",
